@@ -1114,9 +1114,9 @@ End Using
                         }
                     }
 
-                    $('#error_message')[0].style = '';
+                    $('#error_message')[0].style['display'] = 'block';
                     if (data.language === 'VB.NET') {
-                        $('#dot_net_message')[0].style = '';
+                        $('#dot_net_message')[0].style['display'] = 'block';
                     }
                     ;
                     language = data.language;
